# sqratch

./: .env.example  .gitignore  .rules  LICENSE  README.md  bindings.ts  biome.jsonc  components.json  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.cli.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.cursor/rules/: architecture.mdc  business.mdc  db-mod.mdc  general.mdc  react.mdc
.sqratch/queries/: daily-revenue.md
cli/: index.ts
docs/rules/: legendapp-state.md
example/: .env  README.md
example/.sqratch/: config.json  config.jsonc
example/.sqratch/queries/: test.sql
src/: global.d.ts  main.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  DEVELOPMENT.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  constants.rs  errors.rs  launch.rs  launcher.rs  lib.rs  main.rs  plugins.rs  projects.rs  startup.rs  state.rs  windows.rs
src-tauri/src/commands/: db.rs  misc.rs  mod.rs  projects.rs
src-tauri/src/db/: client.rs  errors.rs  manager.rs  mod.rs  types.rs
src-tauri/src/db/clients/: common.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
src-tauri/src/db/postgres/: decode.rs  mod.rs
src-tauri/src/db/utils/: mod.rs  parsing.rs  serialization.rs  strings.rs
src-tauri/src/project/: config.rs  handle.rs  helpers.rs  mod.rs  project_path.rs  types.rs
src-tauri/src/utils/: errors.rs  logging.rs  mod.rs  paths.rs  plugins.rs  strings.rs
src/components/: app-link.tsx  combobox.tsx  date-picker.tsx  default-screens.tsx  dev-tools.tsx  div-button.tsx  icons.tsx  title-bar.tsx  ui-provider.tsx  workspace.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  aspect-ratio.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  input.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  slider.tsx  sonner.tsx  switch.tsx  table.tsx  (+7 more)
src/lib/: jotai.ts  logger.ts  queries.ts  query-client.ts  utils.ts
src/lib/hooks/: use-double-click.ts  use-project.ts  use-route-helpers.ts
src/providers/: db.tsx  project.ts  project.tsx  ui.tsx
src/routes/: __root.tsx  index.tsx  project.index.tsx  project.t.$id.tsx  project.tsx
src/stores/: bottom-panel-store.ts  details-panel-store.ts  editor-store.ts  global-store.ts  index.ts  project-store.ts  projects-store.ts  resource-store.ts  ui-store.ts  workbench-store.ts
src/styles/: allotment.css  main.css  theme.css
(+18 files in other folders)
