[package]
name = "sqratch"
version = "0.1.0"
description = "A Tauri App"
authors = ["Jake Correa <jake@sqratch.dev>"]
edition = "2021"
default-run = "sqratch"


[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
# tauri = { git = "https://github.com/tauri-apps/tauri", rev = "5c2b3b8b65c797304ea8c2b13f4053f01db467c9" }
tauri = { version = "2.4.0", features = [] }
tauri-plugin-opener = "2.2.6"
tauri-plugin-fs = "2.2.0"
tauri-plugin-log = "2.3.1"
taurpc = "0.4.1"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
	"chrono",
	"postgres",
	"runtime-tokio",
	"time",
	"tls-rustls",
] }
tokio = { version = "1.44.1", features = ["full"] }
url = "2.5.4"
async-trait = "0.1.88"
specta = { version = "2.0.0-rc.22", features = ["serde"] }
specta-typescript = "0.0.9"
time = "0.3.41"
log = "0.4.27"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-dialog = "2.2.1"
sha2 = "0.10.9"
once_cell = "1.21.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

# DX perf
[profile]

[profile.dev]
incremental = true
opt-level = 0

[profile.dev.package."*"]
opt-level = 0

[profile.test]
incremental = true
opt-level = 0

[profile.test.package."*"]
opt-level = 0
